# AI-DataSphere

filframe_ai/: .gitignore  README.md  pyproject.toml
filframe_ai/src/filframe_ai/: crew.py  main.py
filframe_ai/src/filframe_ai/config/: tasks.yaml
hardhat/: .gitignore  hardhat.config.js  package.json
hardhat/contracts/: DataMarketplace.sol
hardhat/ignition/modules/: DataMarketplace.js
reactjs/: .gitignore  package.json
reactjs/src/: App.jsx
reactjs/src/pages/: ActiveCampaigns.jsx  UploadData.jsx
